WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29209
REGRESSION(
r47440
): drop down menus at americanexpress.com disappear on mouse out
https://bugs.webkit.org/show_bug.cgi?id=29209
Summary
REGRESSION(r47440): drop down menus at americanexpress.com disappear on mouse...
Alice Liu
Reported
2009-09-11 14:31:37 PDT
Created
attachment 39476
[details]
reduction On the page that is served after logging into americanexpress.com, there are drop down menus at the top of the page. After
http://trac.webkit.org/changeset/47440
, they can easily disappear on mouse out. before that change, one could slowly move the mouse below the menu and access the submenu, but now you have to move quickly in order for the menu not to disappear on you. Bug is observable on Windows, but not on Mac. Reduction attached. <
rdar://problem/7217569
>
Attachments
reduction
(15.47 KB, text/html)
2009-09-11 14:31 PDT
,
Alice Liu
no flags
Details
Further reduction
(199 bytes, text/html)
2009-09-29 12:29 PDT
,
mitz
no flags
Details
Include self-painting inlines in line box overflow
(6.83 KB, patch)
2009-09-29 14:01 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-09-29 12:29:49 PDT
Created
attachment 40316
[details]
Further reduction
mitz
Comment 2
2009-09-29 12:43:16 PDT
The reduction text should say “green” instead of “yellow”.
mitz
Comment 3
2009-09-29 14:01:51 PDT
Created
attachment 40323
[details]
Include self-painting inlines in line box overflow Perhaps there is a more elegant and efficient solution (note that this extends
r47798
), but in practice I think this is fine.
mitz
Comment 4
2009-09-30 14:26:54 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/48947
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug