REGRESSION(r47440): drop down menus at americanexpress.com disappear on mouse out https://bugs.webkit.org/show_bug.cgi?id=29209

Reviewed by Sam Weinig.

WebCore:

Test: fast/inline/relative-positioned-overflow.html

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::computeVerticalOverflow): Add self-painting
inlines to overflow to ensure that they are included in hit-testing.

LayoutTests:

* fast/inline/relative-positioned-overflow-expected.txt: Added.
* fast/inline/relative-positioned-overflow.html: Added.
* platform/mac/fast/repaint/transform-absolute-in-positioned-container-expected.txt:



Canonical link: https://commits.webkit.org/40506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48947 268f45cc-cd09-0410-ab3c-d52691b4dbfc